<resources>
    <string name="app_name">SplitTheBill</string>
    <string name="title_home">Lista de integrantes</string>
    <string name="subtitle_home">Gerencie todos os integrantes existentes ou adicione um novo integrante.</string>
    <string name="btn_calculate_split">Calcular racha</string>

    <string name="menu_item_description">Adicionar integrante</string>

    <string name="title_add_person">Cadastar integrante</string>
    <string name="title_edit_person">Editar integrante</string>
    <string name="title_show_person">Informações do integrante</string>

    <string name="name_tv">Nome*</string>
    <string name="name_et">ex.: Pedro Nobile</string>
    <string name="name_blank_alert_tv">Campo obrigatório.</string>
    <string name="name_exists_alert_tv">Esse nome já existe, informe outro e tente novamente.</string>

    <string name="total_value_tv">Valor total</string>
    <string name="total_value_et">ex.: 190.00</string>

    <string name="purchased_items_tv">Itens comprados</string>
    <string name="purchased_items_et">ex.: Batata frita, Cheetos, Coca-cola</string>
    <string name="purchased_items_alert_tv">Preencha o campo valor total primeiro.</string>
    <string name="purchased_items_blank_alert_tv">Campo obrigatório.</string>

    <string name="back_bt">Voltar</string>

    <string name="save_bt">Salvar</string>
    <string name="edit_person_mi">Editar integrante</string>
    <string name="delete_person_mi">Deletar integrante</string>
    <string name="title_split_resume_tv">Resultado do racha</string>

</resources>